--- a/WeatherApp/app/src/main/res/layout-land/activity_main.xml
+++ b/WeatherApp/app/src/main/res/layout-land/activity_main.xml
@@ -5,14 +5,14 @@
     android:background="@drawable/st_petersburg_rain"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <EditText
-        android:id="@+id/textViewEnterCity"
+        android:id="@+id/editTextEnterCity"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:backgroundTint="@android:color/white"
-        android:hint="@string/textViewEnterCity"
+        android:hint="@string/editTextEnterCity"
         android:importantForAutofill="no"
         android:inputType="text"
         android:textColor="@android:color/white"
@@ -32,8 +32,8 @@
         android:textColor="@android:color/white"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/textViewEnterCity"
-        app:layout_constraintTop_toBottomOf="@+id/textViewEnterCity" />
+        app:layout_constraintStart_toStartOf="@+id/editTextEnterCity"
+        app:layout_constraintTop_toBottomOf="@+id/editTextEnterCity" />
 
     <Button
         android:id="@+id/buttonShowWeather"
