--- a/WeatherApp/app/src/main/res/layout/activity_main.xml
+++ b/WeatherApp/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:inputType="text"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
+        android:autofillHints="@string/editTextEnterCity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
