--- a/WeatherApp/app/src/main/res/layout-land/activity_main.xml
+++ b/WeatherApp/app/src/main/res/layout-land/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/st_petersburg_rain"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <EditText
@@ -17,6 +18,7 @@
         android:inputType="text"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
+        android:autofillHints="@string/editTextEnterCity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +35,8 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/editTextEnterCity"
-        app:layout_constraintTop_toBottomOf="@+id/editTextEnterCity" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextEnterCity"
+        tools:ignore="UnknownId" />
 
     <Button
         android:id="@+id/buttonShowWeather"
