--- a/WeatherApp/app/src/main/res/layout-land/add_settings.xml
+++ b/WeatherApp/app/src/main/res/layout-land/add_settings.xml
@@ -76,6 +76,7 @@
         android:layout_marginStart="76dp"
         android:layout_marginTop="16dp"
         android:orientation="horizontal"
+        android:checkedButton="@id/radioButtonSetTempMesurCelcium"
         app:layout_constraintStart_toStartOf="@+id/textViewShowTempMesur"
         app:layout_constraintTop_toBottomOf="@+id/textViewShowTempMesur">
 
@@ -83,6 +84,7 @@
             android:id="@+id/radioButtonSetTempMesurCelcium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="onCheckBoxTempMesurClicked"
             android:text="@string/radioButtonSetTempCelcium" />
 
         <RadioButton
@@ -90,6 +92,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="106dp"
+            android:onClick="onCheckBoxTempMesurClicked"
             android:text="@string/radioButtonSetTempFahren" />
     </RadioGroup>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
