--- a/WeatherApp/app/src/main/res/layout/add_settings.xml
+++ b/WeatherApp/app/src/main/res/layout/add_settings.xml
@@ -78,6 +78,7 @@
         android:layout_marginStart="76dp"
         android:layout_marginTop="16dp"
         android:orientation="horizontal"
+        android:checkedButton="@id/radioButtonSetTempMesurCelcium"
         app:layout_constraintStart_toStartOf="@+id/textViewShowTempMesur"
         app:layout_constraintTop_toBottomOf="@+id/textViewShowTempMesur">
 
@@ -85,6 +86,7 @@
             android:id="@+id/radioButtonSetTempMesurCelcium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="onCheckBoxTempMesurClicked"
             android:text="@string/radioButtonSetTempCelcium" />
 
         <RadioButton
@@ -92,6 +94,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="106dp"
+            android:onClick="onCheckBoxTempMesurClicked"
             android:text="@string/radioButtonSetTempFahren" />
     </RadioGroup>
 
