--- a/WeatherApp/app/src/main/res/layout/fragment_main_screen.xml
+++ b/WeatherApp/app/src/main/res/layout/fragment_main_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".MainActivity">
+    tools:context=".aktivities.MainActivity">
 
     <TextView
         android:id="@+id/textViewNow"
