--- a/WeatherApp/app/src/main/res/layout-land/fragment_main_screen.xml
+++ b/WeatherApp/app/src/main/res/layout-land/fragment_main_screen.xml
@@ -42,7 +42,7 @@
         app:srcCompat="@drawable/cloudy_icon" />
 
     <TextView
-        android:id="@+id/textViewTemperature"
+        android:id="@+id/textViewItemTemperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -69,8 +69,8 @@
         android:layout_marginStart="12dp"
         android:text="@string/textViewAngle"
         android:textSize="36sp"
-        app:layout_constraintStart_toEndOf="@+id/textViewTemperature"
-        app:layout_constraintTop_toTopOf="@+id/textViewTemperature" />
+        app:layout_constraintStart_toEndOf="@+id/textViewItemTemperature"
+        app:layout_constraintTop_toTopOf="@+id/textViewItemTemperature" />
 
     <TextView
         android:id="@+id/textViewTextWeather"
@@ -102,8 +102,8 @@
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/textViewTempMesur"
-        app:layout_constraintStart_toStartOf="@+id/textViewTemperature"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTemperature" />
+        app:layout_constraintStart_toStartOf="@+id/textViewItemTemperature"
+        app:layout_constraintTop_toBottomOf="@+id/textViewItemTemperature" />
 
     <TextView
         android:id="@+id/textViewDate"
