Добавил Добавил список вызванных городов на main_activity_fragment.

--- a/WeatherApp/app/src/main/res/layout/fragment_activity_main.xml
+++ b/WeatherApp/app/src/main/res/layout/fragment_activity_main.xml
@@ -6,6 +6,7 @@
     android:background="@drawable/rain_street_portrait"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <EditText
         android:id="@+id/editTextEnterCity"
         android:layout_width="0dp"
@@ -13,13 +14,14 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
+        android:autofillHints="@string/editTextEnterCity"
         android:backgroundTint="@android:color/white"
         android:hint="@string/editTextEnterCity"
         android:importantForAutofill="no"
         android:inputType="text"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
-        android:autofillHints="@string/editTextEnterCity"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,4 +63,14 @@
         app:layout_constraintEnd_toStartOf="@+id/buttonShowWeather"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/recent_cities_List_linear_layout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="14sp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewRecentCities"></LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
