--- a/WeatherApp/app/src/main/res/layout/weather_recycler_item.xml
+++ b/WeatherApp/app/src/main/res/layout/weather_recycler_item.xml
@@ -4,7 +4,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:layout_marginTop="4dp"
+    android:layout_marginTop="14dp"
+    android:layout_marginBottom="14dp"
     android:orientation="horizontal">
 
     <TextView
@@ -13,7 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
         android:text=""
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/imageViewItemWeatherIcon"
