--- a/WeatherApp/app/src/main/res/layout/fragment_main_screen.xml
+++ b/WeatherApp/app/src/main/res/layout/fragment_main_screen.xml
@@ -44,7 +44,7 @@
         android:id="@+id/textViewItemTemperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
+        android:layout_marginStart="100dp"
         android:text="@string/textVewTemperature"
         android:textSize="62sp"
         android:textStyle="bold"
@@ -126,6 +126,7 @@
         android:text="@string/checkBoxShowWind"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewItemTemperature" />
 
@@ -159,6 +160,7 @@
         android:text="@string/textviewWindValue"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:visibility="invisible"
         app:layout_constraintBaseline_toBaselineOf="@+id/textViewWindSpeed"
         app:layout_constraintStart_toEndOf="@+id/textViewWindSpeed" />
 
@@ -192,6 +194,7 @@
         android:text="@string/textviewWindSpeedMesur"
         android:textSize="14sp"
         android:textStyle="bold"
+        android:visibility="invisible"
         app:layout_constraintBaseline_toBaselineOf="@+id/textViewWindValue"
         app:layout_constraintStart_toEndOf="@+id/textViewWindValue" />
 
